fix update recette
